--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/atc_team9?createDatabaseIfNotExist=true
-    username: root
-    password: asdf1234
+    url: ${db_url}
+    username: ${db_username}
+    password: ${db_password}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create # create , none
+      ddl-auto: none # create , none
     #    show-sql: true
     properties:
       hibernate:
