--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,27 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
   datasource:
-    url: jdbc:mysql://103.221.220.71:3306/fzztgyzv_project
+    url: jdbc:mysql://103.221.220.71:3306/fzztgyzv_project?useUnicode=true&characterEncoding=utf8
     username: fzztgyzv_project
     password: _7ifSA~&tboP
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     #    show-sql: true
     properties:
       hibernate:
         format_sql: true
+        connection:
+          CharSet: utf8
+          characterEncoding: utf8
+          useUnicode: true
+  thymeleaf:
+    cache: off
+    mode: HTML
 logging:
   level:
     org.hibernate.SQL: debug
