--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+#      ddl-auto: create
       # create , none
     #    show-sql: true
     properties:
