--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
       max-request-size: 10MB
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create-drop
     #    show-sql: true
     properties:
       hibernate:
