--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create # create , none
+      ddl-auto: none # create , none
     #    show-sql: true
     properties:
       hibernate:
@@ -41,3 +41,4 @@ server:
   tomcat:
     max-http-form-post-size: -1
     max-swallow-size: -1
+  port: 8082
