--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
   jpa:
     hibernate:
 #      ddl-auto: create
-      ddl-auto: none
+      ddl-auto: update
     #    show-sql: true
     properties:
       hibernate:
